# haskell-diagrams-canvas-json

./: .gitignore  README.md  cabal.project  flake.nix  justfile  package.json
diagrams-canvas-json/: CHANGELOG.md  diagrams-canvas-json.cabal
diagrams-canvas-json-cairo/: CHANGELOG.md  diagrams-canvas-json-cairo.cabal
diagrams-canvas-json-cairo/exe/: Main.hs
diagrams-canvas-json-cairo/src/Diagrams/Backend/CanvasJson/: Cairo.hs
diagrams-canvas-json-dev/: CHANGELOG.md  LICENSE  diagrams-canvas-json-dev.cabal
diagrams-canvas-json-viewer/: CHANGELOG.md  diagrams-canvas-json-viewer.cabal
diagrams-canvas-json-viewer/exe/: Main.hs
diagrams-canvas-json-web/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.lib.config.ts  vite.pixi.config.ts
diagrams-canvas-json-web/dev/: index.html  main.ts
diagrams-canvas-json-web/src/lib/: index.ts  pixi.ts  renderer-pixi.ts  renderer.ts  types.ts  viewer-pixi.ts  viewer.ts
diagrams-canvas-json/exe/: Main.hs
diagrams-canvas-json/src/Diagrams/Backend/: CanvasJson.hs
gerber-diagrams-canvas-json/: CHANGELOG.md  gerber-diagrams-canvas-json.cabal
gerber-diagrams-canvas-json/data/haskell-badge/: top-view.json
gerber-diagrams-canvas-json/data/haskell-badge/gerber/: copper-bottom.pho  copper-top.pho  drill.pho  fabrication-drawing.pho  outline.pho  silkscreen-bottom.pho  silkscreen-top.pho  solder-mask-bottom.pho  solder-mask-top.pho  stencil-bottom.pho  stencil-top.pho
gerber-diagrams-canvas-json/exe/: Main.hs
gerber-diagrams-canvas-json/src/Gerber/Diagrams/: CanvasJson.hs
