cabal-version:   3.0
name:            diagrams-canvas-json
version:         0.1.0.0
synopsis:
  diagrams backend encoding drawings as json to be drawn in a browser using canvas API

-- description:
license:         MIT
license-file:    LICENSE
author:          Handré Stolp
maintainer:      HanStolpo@gmail.com

-- copyright:
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.20.2.0
  hs-source-dirs:   src
  default-language: GHC2021

executable diagrams-canvas-json
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  ^>=4.20.2.0
    , diagrams-canvas-json

  hs-source-dirs:   exe
  default-language: GHC2021

test-suite diagrams-canvas-json-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.20.2.0
    , diagrams-canvas-json
